--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>F&B</title>
         <link rel="stylesheet" href="styles/index.css"/>
     </head>
     <body>
@@ -43,7 +43,7 @@
                 <div class="cards-container-1">
                     <div class="card-1">
                         <div class="card-img-1">
-                            <img src="img/Layer 3.png"/>
+                            <img src="img/1/3.png"/>
                         </div>
                         <div class="card-content-1">
                             <h3>Fig. 1 (plant)</h3>
@@ -53,7 +53,7 @@
                     </div>
                     <div class="card-1">
                         <div class="card-img-1">
-                            <img src="img/Layer 2.png"/>
+                            <img src="img/1/2.png"/>
                         </div>
                         <div class="card-content-1">
                             <h3>Fig. 2 (flower)</h3>
@@ -63,7 +63,7 @@
                     </div>
                     <div class="card-1">
                         <div class="card-img-1">
-                            <img src="img/Layer 3.png"/>
+                            <img src="img/1/3.png"/>
                         </div>
                         <div class="card-content-1">
                             <h3>Fig. 3 (leaf)</h3>
@@ -73,7 +73,87 @@
                     </div>
                     <div class="card-1">
                         <div class="card-img-1">
-                            <img src="img/Layer 4.png"/>
+                            <img src="img/1/4.png"/>
+                        </div>
+                        <div class="card-content-1">
+                            <h3>Fig. 4 (wood)</h3>
+                            <p>Базовый вектор развития не даёт нам иного выбора, кроме определения новых предложений.</p>
+                            <button class="more-1">Подробнее</button>
+                        </div>
+                    </div>
+                    <div class="card-1" style="display: none;">
+                        <div class="card-img-1">
+                            <img src="img/2/3.png"/>
+                        </div>
+                        <div class="card-content-1">
+                            <h3>Fig. 1 (plant)</h3>
+                            <p>Имеется спорная точка зрения, гласящая примерно следующее: активно развивающиеся страны третьего мира своевременно верифицированы.</p>
+                            <button class="more-1">Подробнее</button>
+                        </div>
+                    </div>
+                    <div class="card-1" style="display: none;">
+                        <div class="card-img-1">
+                            <img src="img/2/2.png"/>
+                        </div>
+                        <div class="card-content-1">
+                            <h3>Fig. 2 (flower)</h3>
+                            <p>Прежде всего, синтетическое тестирование влечет за собой процесс внедрения и модернизации условий.</p>
+                            <button class="more-1">Подробнее</button>
+                        </div>
+                    </div>
+                    <div class="card-1" style="display: none;">
+                        <div class="card-img-1">
+                            <img src="img/2/3.png"/>
+                        </div>
+                        <div class="card-content-1">
+                            <h3>Fig. 3 (leaf)</h3>
+                            <p>Лишь непосредственные участники прогресса неоднозначны и будут в равной степени предоставлены сами себе для работы.</p>
+                            <button class="more-1">Подробнее</button>
+                        </div>
+                    </div>
+                    <div class="card-1" style="display: none;">
+                        <div class="card-img-1">
+                            <img src="img/2/4.png"/>
+                        </div>
+                        <div class="card-content-1">
+                            <h3>Fig. 4 (wood)</h3>
+                            <p>Базовый вектор развития не даёт нам иного выбора, кроме определения новых предложений.</p>
+                            <button class="more-1">Подробнее</button>
+                        </div>
+                    </div>
+                    <div class="card-1" style="display: none;">
+                        <div class="card-img-1">
+                            <img src="img/3/3.png"/>
+                        </div>
+                        <div class="card-content-1">
+                            <h3>Fig. 1 (plant)</h3>
+                            <p>Имеется спорная точка зрения, гласящая примерно следующее: активно развивающиеся страны третьего мира своевременно верифицированы.</p>
+                            <button class="more-1">Подробнее</button>
+                        </div>
+                    </div>
+                    <div class="card-1" style="display: none;">
+                        <div class="card-img-1">
+                            <img src="img/3/2.png"/>
+                        </div>
+                        <div class="card-content-1">
+                            <h3>Fig. 2 (flower)</h3>
+                            <p>Прежде всего, синтетическое тестирование влечет за собой процесс внедрения и модернизации условий.</p>
+                            <button class="more-1">Подробнее</button>
+                        </div>
+                    </div>
+                    <div class="card-1" style="display: none;">
+                        <div class="card-img-1">
+                            <img src="img/3/3.png"/>
+                        </div>
+                        <div class="card-content-1">
+                            <h3>Fig. 3 (leaf)</h3>
+                            <p>Лишь непосредственные участники прогресса неоднозначны и будут в равной степени предоставлены сами себе для работы.</p>
+                            <button class="more-1">Подробнее</button>
+                        </div>
+                    </div>
+                    <div class="card-1" style="display: none;">
+                        <div class="card-img-1">
+                            <img src="img/3/4.png"/>
                         </div>
                         <div class="card-content-1">
                             <h3>Fig. 4 (wood)</h3>
@@ -83,11 +163,11 @@
                     </div>
                 </div>
                 <div class="page-changer-1">
-                    <svg width="26" height="16" viewBox="0 0 26 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg id="prev-page-1" width="26" height="16" viewBox="0 0 26 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0.292892 7.29289C-0.0976315 7.68342 -0.0976315 8.31658 0.292892 8.70711L6.65685 15.0711C7.04738 15.4616 7.68054 15.4616 8.07107 15.0711C8.46159 14.6805 8.46159 14.0474 8.07107 13.6569L2.41421 8L8.07107 2.34315C8.46159 1.95262 8.46159 1.31946 8.07107 0.928932C7.68054 0.538408 7.04738 0.538408 6.65685 0.928932L0.292892 7.29289ZM26 7L1 7V9L26 9V7Z" fill="#899D9D"/>
                     </svg>
-                    <h3>1 из 3</h3>
-                    <svg width="26" height="16" viewBox="0 0 26 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <h3 id="page-number">1 из 3</h3>
+                    <svg id="next-page-1" width="26" height="16" viewBox="0 0 26 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M25.7071 8.70711C26.0976 8.31658 26.0976 7.68342 25.7071 7.2929L19.3431 0.928934C18.9526 0.538409 18.3195 0.538409 17.9289 0.928934C17.5384 1.31946 17.5384 1.95262 17.9289 2.34315L23.5858 8L17.9289 13.6569C17.5384 14.0474 17.5384 14.6805 17.9289 15.0711C18.3195 15.4616 18.9526 15.4616 19.3431 15.0711L25.7071 8.70711ZM-8.74228e-08 9L25 9L25 7L8.74228e-08 7L-8.74228e-08 9Z" fill="#899D9D"/>
                     </svg>
                 </div>
@@ -176,5 +256,7 @@
                 </section>
             </footer>
         </main>
+
+        <script type="text/javascript" src="scripts/slider.js"></script>
     </body>
 </html>
