mobile adaptive added

--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, maximum-scale=1.0, minimum-scale=1.0">
         <title>F&B</title>
+        <link rel="stylesheet" href="styles/reset.css"/>
+        <link rel="stylesheet" href="styles/font.css"/>
         <link rel="stylesheet" href="styles/index.css"/>
+        <link rel="stylesheet" href="styles/mobile.css"/>
     </head>
     <body>
         <header class="hr-container">
@@ -13,7 +18,7 @@
             <div class="header-catalog-elem text">О лабаратории</div>
             <div class="header-catalog-elem text" style="margin-right: 20%;">Контакты</div>
 
-            <a href="#" style="margin-right: 5%; cursor: pointer;">
+            <a href="#" class="search-a">
                 <svg class="search" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M13 19C8.58172 19 5 15.4183 5 11C5 6.58172 8.58172 3 13 3C17.4183 3 21 6.58172 21 11C21 15.4183 17.4183 19 13 19Z" stroke="#BAE249" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     <path d="M2.99998 21L7.34998 16.65" stroke="#BAE249" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -29,9 +34,9 @@
         </header>
         <main>
             <section class="section-1">
-                <h1 style="font-family: Cormorant; font-size: 5em; color: #FFFFFF;"><b>Крупнейшая коллекция</b></h1>
-                <h1 style="font-family: Cormorant; font-size: 5em; color: #FFFFFF;"><b>природных артефактов</b></h1>
-                <div class="text" style="color: #FFFFFF; margin-top: 4%; width: 50%; line-height: 2.5; font-size: medium;">Являясь всего лишь частью общей картины, интерактивные прототипы, которые представляют собой яркий пример европейского типа политической и социальной культуры.</div>
+                <h1 class="biggest-collection"><b>Крупнейшая коллекция</b></h1>
+                <h1 class="biggest-collection"><b>природных артефактов</b></h1>
+                <div class="text just-part-of">Являясь всего лишь частью общей картины, интерактивные прототипы, которые представляют собой яркий пример европейского типа политической и социальной культуры.</div>
                 <div class="text investigate">
                     <b style="font-size: 1rem">Исследовать</b>
                     <svg width="44" height="15" viewBox="0 0 44 15" fill="none" xmlns="http://www.w3.org/2000/svg">
